# YCvTools

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md
.github/: .github-ci.yml
.github/workflows/: .github-ci.yml  python-app.yml
cvtools/: __init__.py
cvtools/data/: parse.py
cvtools/schemas/: base.py
cvtools/schemas/data/: coord.py  dataset.py  label_info.py  train_dataset.py
data/: parse.py
schemas/: base.py  train_dataset.py
schemas/data/: label_info.py  train_dataset.py
tests/asset/: dog&cat.xml
tests/data/: test_parse.py
tests/schemas/data/: test_train_dataset.py
