[tool.poetry]
name = "ycvtools"
version = "0.1.0"
description = "a cv tool for cv engineer"
authors = ["叶纯 <ye971249@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependencies]
opencv-python = ["opencv-python"]
arrow = ["arrow"]
pydantic = ["pydantic"]

[tool.mypy]
ignore_missing_imports = true